--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
 version: 2.1
 
-# Fully tests your app with the DB sidecar
 jobs:
   test:
+    description: "Fully tests your app with the DB sidecar"
     docker:
       # Primary Container
       - image: cimg/python:3.14
@@ -20,14 +20,12 @@ jobs:
 
     steps:
       - checkout
-      # System deps for psycopg2
       - run:
           name: Install system dependencies
           command: |
             sudo apt-get update
             sudo apt-get install -y gcc libpq-dev wget tar
 
-      # Wait for database
       - run:
           name: Install Dockerize
           command: wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && sudo tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
@@ -38,7 +36,6 @@ jobs:
           name: Wait for db
           command: dockerize -wait tcp://localhost:5432 -timeout 1m
 
-      # Python deps
       - run:
           name: Install Python dependencies
           command: |
@@ -46,7 +43,6 @@ jobs:
             pip install -r project/requirements/requirements.txt
             pip install -r project/requirements/requirements-dev.txt
 
-      # Run tests
       - run:
           name: Run tests
           command: make test
@@ -58,8 +54,8 @@ jobs:
       - store_artifacts:
           path: test-results
 
-  # Build Docker Image (multi-arch with Buildx)
   build:
+    description: "Build Docker Image (multi-arch with Buildx)"
     docker:
       - image: cimg/base:stable
 
@@ -69,7 +65,6 @@ jobs:
       - setup_remote_docker:
           docker_layer_caching: true
 
-      # Install Docker Buildx
       - run:
           name: Install Docker Buildx
           command: |
@@ -79,24 +74,20 @@ jobs:
             chmod +x ~/.docker/cli-plugins/docker-buildx
             docker buildx version
 
-      # Set up QEMU/binfmt for cross-platform builds
       - run:
           name: Enable QEMU for multi-arch
           command: docker run --rm --privileged tonistiigi/binfmt:latest --install all
 
-      # Create dedicated builder instance
       - run:
           name: Create Buildx builder
           command: |
             docker buildx create --name mybuilder --use
 
-      # Docker Hub login
       - run:
           name: Docker Hub Login
           command: |
             echo $DOCKERHUB_PASS | docker login -u $DOCKERHUB_USER --password-stdin
 
-      # Build and push multi-arch Docker image
       - run:
           name: Build and Push Multi-Arch Image
           command: |
@@ -107,7 +98,6 @@ jobs:
               -t $DOCKERHUB_USER/groceryapp:latest \
               --push .
 
-# Workflows
 workflows:
   version: 2
 
